<resources>
    <string name="app_name">Habitus Track</string>
    <string name="login_background">Login Background</string>
    <string name="habitus_track">Habitus Track</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="my_habits">My Habits</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="settings">Settings</string>
    <string name="account">ACCOUNT</string>
    <string name="personal_info">Personal Information</string>
    <string name="log_out">Log Out</string>
    <string name="preferences">PREFERENCES</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="more">MORE</string>
    <string name="reset_all_data">Reset All Data</string>
    <string name="information">INFORMATION</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="progress_overview">Progress Overview</string>
    <string name="today_status">Today: %1$d/%2$d completed</string>
    <string name="daily_completion">Daily Completion</string>
    <string name="active_habits">Active Habits</string>
    <string name="best_streak">Best Streak</string>
    <string name="weekly_breakdown">Weekly Breakdown</string>
    <string name="start_journey_msg">Start your journey,\ncreate your first habit and begin\nbuilding a better version of yourself...</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="add_habit">Add Habit</string>
    <string name="create_new_habit">Create New Habit</string>
    <string name="habit_name">Habit Name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="save_habit">Save Habit</string>
    <string name="join_habitus">Join Habitus</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_have_account">Already have an account? Login</string>
</resources>